🐛 fix: corrigindo erro de overflow no BookList

--- a/ProjetoBiblioteca.FrontEnd/src/components/Books/style.css
+++ b/ProjetoBiblioteca.FrontEnd/src/components/Books/style.css
@@ -4,13 +4,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow-y: auto;
 }
 
 .book-card{
     background-color: var(--background-components);
     width: 80%;
-    margin: 5px;
+    margin: 10px;
     padding: 10px;
 }
 
