--- a/ProjetoBiblioteca.FrontEnd/src/components/layout/LayoutWrapper/style.css
+++ b/ProjetoBiblioteca.FrontEnd/src/components/layout/LayoutWrapper/style.css
@@ -12,13 +12,12 @@
     background-color: #f5f5f5;
     position: relative;
 }
+
 main{
     flex: 1;
     overflow-y: auto;
+    padding: 10px;
     display: flex;
     flex-direction: column;
-}
-
-@media screen and (max-width: 768px) {
-    
+    gap: 20px;
 }
